--- a/styles/style.css
+++ b/styles/style.css
@@ -23,13 +23,12 @@
 }
 
 .content-box {
-    max-width: 1440px;
+    max-width: 1500px;
     padding: 0 20px;
     margin: auto;
 }
 
 /*================ first Banner Section ===============*/
-
 .hero-section {
     padding: 70px 0;
 }
@@ -58,7 +57,10 @@
     width: 100%;
 }
 
-/*=================== second section */
+/*============= logo section =========*/
+.logo-section {
+    padding-bottom: 55px;
+}
 
 .company-logo {
     display: flex;
@@ -66,15 +68,147 @@
     flex-wrap: wrap;
     gap: 15px
 }
+
 .company-logo img{
     width: auto;
     height: 48px;
-
 }
+
+/* ========services======== */
+.services-sec{
+    padding: 70px 0  ;
+}
+
+.service-art{ 
+    display: flex;
+    align-items:center;
+    gap: 50px;
+}
+
+.service-art h2{
+    font-size:40px;
+    background:#B9FF66;
+    padding:0 7px;
+    border-radius: 10px;
+}
+
+.service-art p{
+    max-width: 580px;
+    font-size: 18px;
+}
+
+        /* ===========card-section========== */
+
+.card-section{
+    padding: 70px 0;
+}
+
+.card{
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    border-radius: 50px;
+    /* box-shadow: 10px 5px 5px #191A23; */
+    border: 1px solid #191A23;
+}
+.drop-shadow{
+    filter: drop-shadow(0px 5px 0 #191A23);
+}
+.bg-green {
+    background-color: #B9FF66;
+}
+.bg-gray{
+    background: #F3F3F3;
+}
+.bg-navy{
+    background-color: #191A23;
+}
+.bg-black{
+    background-color:black;
+}
+.text-black{
+    color: black;
+}
+.text-green{
+    color: #B9FF66;
+}
+.text-white{
+    color: #FFFFFF;
+}
+.card-article{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+.card-article h2{
+    padding: 0  7px;
+    font-size: 30px;
+    border-radius: 10px;
+    font-weight: 500;
+}
+
+.card-article h3{
+    width: 183px;
+    padding: 0  7px;
+    font-size: 30px;
+    border-radius: 10px;
+    font-weight: 500;
+}
+.bg-white{
+    background-color: #FFFFFF;
+}
+.arrow-div{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.arowIcon{
+    display:inline-block ;
+    
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    transform: rotate(50deg);
+    border-radius: 100%;
+}
+.arowIcon i{
+    line-height: 40px;
+    font-size: 25px;
+}
+.arrow-div a{
+    display: inline-block;
+    text-decoration: none;
+    font-size:20px ;
+}
+.card-img{
+    align-self: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ======================== Responsive ============================== */
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     .hero-items {
         flex-direction: column-reverse;
     }
@@ -93,4 +227,4 @@
         width: auto;
         height: 35px;
     }
-}
+  }
